# shirk

./: .gitmodules  CMakeLists.txt
autotests/: CMakeLists.txt
autotests/core/: CMakeLists.txt  futurepromisetest.cpp
src/: CMakeLists.txt  main.cpp
src/api/: CMakeLists.txt  common.h  common_p.h  conversations.cpp  conversations.h  oauth.cpp  oauth.h  teaminfo.cpp  teaminfo.h
src/core/: CMakeLists.txt  api.cpp  api.h  authcontroller.cpp  authcontroller.h  compat.h  config.cpp  config.h  config.h.in  conversation.cpp  conversation.h  conversationsmodel.cpp  conversationsmodel.h  environment.h  future.cpp  future.h  iconloader.cpp  iconloader.h  networkdispatcher.cpp  networkdispatcher.h  rtmcontroller.cpp  rtmcontroller.h  rtmeventlistener.cpp  rtmeventlistener.h  rtmsocket.cpp  rtmsocket.h  team.cpp  team.h  teamcontroller.cpp  teamcontroller.h  teamsmodel.cpp  teamsmodel.h  user.cpp  user.h  usermanager.cpp  usermanager.h
src/gui/: CMakeLists.txt  addteampage.cpp  addteampage.h  addteampage.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  teampage.cpp  teampage.h  teampage.ui
src/gui/kpackage_packagestructure_shirk_uipackage/: CMakeLists.txt  shirk-packagestructure-uipackage.json  shirk-uipackage.desktop  themestructure.cpp
src/gui/uipackages/: CMakeLists.txt
src/gui/uipackages/default/: metadata.desktop
src/gui/uipackages/default/contents/: main.qml
src/slackapi/: CMakeLists.txt  common.h  common_p.h  conversations.cpp  conversations.h  events.cpp  events.h  files.cpp  files.h  oauth.cpp  oauth.h  rtm.cpp  rtm.h  teaminfo.cpp  teaminfo.h  user.cpp  user.h
src/utils/: CMakeLists.txt  compat.h  compiler.h  memory.h  stringliterals.h
